--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <input type="text" id="userCity" placeholder="Your City">
         <br>
         <input type="submit" value="Sign Up" id="btn-Submit" onclick="add()">
-        <input type="submit" value="Cancel" id="btn-Cancel" onclick="cancel()">
+        <input type="reset" value="Cancel" id="btn-Cancel" onclick="cancel()">
         <a href="login.html"><input type="submit" value="Login" class="btn-login"></a>
 
     </div>
