--- a/login.html
+++ b/login.html
@@ -15,11 +15,11 @@
     </div>
     <div class="loginform">
         <h1>Login</h1>
-        <input type="text" id="userEmail" placeholder="Email:" class="margin" required>
+        <input type="text" id="userEnteredEmail" placeholder="Email:" class="margin" required>
         <br>
-        <input type="password" id="userPassword" placeholder="********" maxlength="8" class="margin" required>
+        <input type="password" id="userEnteredPassword" placeholder="********" maxlength="8" class="margin" required>
         <br>
-        <input type="submit" value="Login" id="btn-Submit">
+        <input type="submit" value="Login" id="btn-Submit" onclick="verify()">
     </div>
 </body>
 
